--- a/index.css
+++ b/index.css
@@ -110,18 +110,11 @@ body
     margin-left: 140px;
     background: rgba(0,100,0);
 }
-footer {
-    position: fixed;
-    bottom: 0;
-    width: 70%;
-    background-color: #FFD700;
-    text-align: center;
-    color: black;
-    padding: 10px;
-    font-size: 25px;
-}
-
-.copyright p {
-    margin: 0;
-    font-size: 14px;
+#footer h1 {
+  text-align: center;
+  font-size: 0.6rem;
+  padding: 0.6rem;
+  font-weight: 45;
+  color: black;
+  background: gold;
 }
