--- a/index.css
+++ b/index.css
@@ -113,15 +113,17 @@ body
 footer {
     position: fixed;
     bottom: 0;
-    width: 70%;
+    width: 100%;
     background-color: #FFD700;
     text-align: center;
     color: black;
-    padding: 10px;
-    font-size: 25px;
+    padding: 0;
+    font-size: 5px;
+    font-family: sans-serif;
 }
 
 .copyright p {
     margin: 0;
     font-size: 14px;
+    
 }
